# cham-equality

./: .gitignore  CLAUDE.md  dummy-shelter.sql  insert.sql  shelter.sql  update_place_english.sql  update_region_english.sql  update_shelter_english.sql  대전 민방위 대피시설 내역(25.12.31. 기준).xlsx  임시주거시설목록(대전시).xlsx  지진옥외대피장 현황.xlsx  화학사고 대피장소 현황 정보공개.xlsx
.github/workflows/: cham-equality.yaml
chamApi/: CLAUDE.md  README-db.md  build.gradle  settings.gradle
chamApi/.claude/commands/: integrationtest.md  refactoring.md  unittest.md
chamApp/: .env.example  .prettierignore  App.tsx  README-file.md  README.md  app.json  index.js  package-lock.json  package.json  react-native.config.js
chamApp/android/: gradle.properties  settings.gradle
chamApp/android/app/: build.gradle
chamApp/ios/: Podfile
chamApp/ios/chamApp/: AppDelegate.swift  (+2 more)
chamApp/src/: i18n.ts
crawling/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
crawling/app/: main.py
crawling/app/convert/: converter.py  refine.py
crawling/resources/: test.hwp  test2.hwp  test3.hwpx
crawling/src/app/: main.py
crawling/src/app/convert/: converter.py  refine.py
crawling/src/app/core/: config.py  db.py  exceptions.py  paths.py
crawling/src/app/crawling/: crawl.py
crawling/src/app/pipeline/: converter.py  crawl.py  executor.py  extract.py  refine.py  schemas.py  store.py  summary.py
front/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/public/: account-deletion.html
front/src/: index.css  main.tsx
(+480 files in other folders)
