[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "crawling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "charset-normalizer==3.4.7",
    "et-xmlfile==2.0.0",
    "fastapi==0.128.8",
    "genai==2.1.0",
    "google-api-python-client==2.194.0",
    "google-genai==1.47.0",
    "logging>=0.4.9.6",
    "pandoc==2.4",
    "pipdeptree==2.35.3",
    "prompt-toolkit==3.0.52",
    "pure-eval==0.2.3",
    "pyasn1-modules==0.4.2",
    "pydantic-core==2.46.3",
    "pyhwp==0.1b15",
    "pypandoc==1.17",
    "pytest-playwright==0.7.1",
    "six>=1.17.0",
    "uvicorn==0.46.0",
]
